--- a/scss/main.scss
+++ b/scss/main.scss
@@ -162,6 +162,7 @@ img {
                 right: 0;
                 font-size: 20px;
                 background: $main-color;
+                color: set-text-color($main-color);
                 border-radius: 50%;
                 height: 15px;
                 width: 15px;
@@ -174,7 +175,7 @@ img {
             &-icon {
                 border-radius: 50%;
                 background: $dark-color;
-                color: #fff;
+                color: set-text-color($dark-color);
                 padding: 2rem;
                 width: 70px;
                 height: 70px;
@@ -191,6 +192,7 @@ img {
 
                     .process-step {
                         background: $dark-color;
+                        color: set-text-color($dark-color);
                     }
                 }
             }
